fix(template/provisioner): Add imagePullPolicy (#1037)
to avoid:

```
docker pull busybox
Using default tag: latest
latest: Pulling from library/busybox
mediaType in manifest should be 'application/vnd.docker.distribution.manifest.v2+json' not 'application/vnd.oci.image.manifest.v1+json'
```

Signed-off-by: Jaromir Konecny <konecny.jaromir@allrisk.cz>

--- a/templates/csi.yaml.j2
+++ b/templates/csi.yaml.j2
@@ -103,6 +103,7 @@ spec:
               mountPath: "/etc/secret-volume"
         - name: kadalu-logging
           image: {{ images_hub }}/library/busybox
+          imagePullPolicy: IfNotPresent
           command: ["/bin/sh"]
           args: ["-c", "while true; do logcnt=$(/bin/ls /var/log/gluster/ | wc -l); if [ ${logcnt} -gt 0 ]; then break; fi; sleep 5; done; tail -F /var/log/gluster/*.log"]
           volumeMounts:
