--- a/templates/csi.yaml.j2
+++ b/templates/csi.yaml.j2
@@ -1,4 +1,147 @@
 # -*- mode: yaml -*-
+---
+## Deploy CSI NodePlugin
+---
+kind: DaemonSet
+apiVersion: apps/v1
+metadata:
+  name: kadalu-csi-nodeplugin
+  namespace: {{ namespace }}
+  labels:
+    app.kubernetes.io/part-of: kadalu
+    app.kubernetes.io/component: csi-driver
+    app.kubernetes.io/name: kadalu-csi-nodeplugin
+spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/part-of: kadalu
+      app.kubernetes.io/component: csi-driver
+      app.kubernetes.io/name: kadalu-csi-nodeplugin
+  updateStrategy:
+    type: OnDelete
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/part-of: kadalu
+        app.kubernetes.io/component: csi-driver
+        app.kubernetes.io/name: kadalu-csi-nodeplugin
+      namespace: {{ namespace }}
+    spec:
+      serviceAccountName: kadalu-csi-nodeplugin
+      containers:
+        - name: csi-node-driver-registrar
+          image: {{ images_hub }}/raspbernetes/csi-node-driver-registrar:2.0.1
+          args:
+            - "--v=5"
+            - "--csi-address=$(ADDRESS)"
+            - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/bin/sh", "-c", "rm -rf /registration/kadalu /registration/kadalu-reg.sock"]
+          env:
+            - name: ADDRESS
+              value: /plugin/csi.sock
+            - name: DRIVER_REG_SOCK_PATH
+              value: {{ kubelet_dir }}/plugins/kadalu/csi.sock
+            - name: KUBE_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+            - name: KADALU_VERSION
+              value: "{{ kadalu_version }}"
+            - name: K8S_DIST
+              value: "{{ k8s_dist }}"
+            - name: VERBOSE
+              value: "{{ verbose }}"
+          volumeMounts:
+            - name: plugin-dir
+              mountPath: /plugin
+            - name: registration-dir
+              mountPath: /registration
+        - name: kadalu-nodeplugin
+          securityContext:
+            privileged: true
+            capabilities:
+              add: ["SYS_ADMIN"]
+            allowPrivilegeEscalation: true
+          image: {{ images_hub }}/{{ docker_user }}/kadalu-csi:{{ kadalu_version }}
+          lifecycle:
+            postStart:
+              exec:
+                command:
+                  - /bin/sh
+                  - '-c'
+                  - >
+                    mount | grep glusterfs | awk '{print $1 " " $3}' | sed 's/:/
+                    /' | awk '{print "umount " $3 ";glusterfs --process-name
+                    fuse --volfile-id " $2 " --volfile-server " $1 "
+                    --log-level=DEBUG " $3}' > /tmp/remount.sh ; chmod +x
+                    /tmp/remount.sh ; /tmp/remount.sh
+          env:
+            - name: NODE_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+            - name: CSI_ENDPOINT
+              value: unix://plugin/csi.sock
+            - name: KADALU_VERSION
+              value: "{{ kadalu_version }}"
+            - name: K8S_DIST
+              value: "{{ k8s_dist }}"
+            - name: VERBOSE
+              value: "{{ verbose }}"
+            - name: CSI_ROLE
+              value: "nodeplugin"
+          volumeMounts:
+            - name: plugin-dir
+              mountPath: /plugin
+            - name: pods-mount-dir
+              mountPath: {{ kubelet_dir }}/pods
+              mountPropagation: "Bidirectional"
+            - name: glusterfsd-volfilesdir
+              mountPath: "/var/lib/gluster"
+            - name: gluster-dev
+              mountPath: "/dev"
+            - name: varlog
+              mountPath: /var/log/gluster
+            - name: csi-dir
+              mountPath: {{ kubelet_dir }}/plugins/kubernetes.io/csi
+              mountPropagation: "Bidirectional"
+        - name: kadalu-logging
+          image: {{ images_hub }}/library/busybox
+          imagePullPolicy: IfNotPresent
+          command: ["/bin/sh"]
+          args: ["-c", "while true; do logcnt=$(/bin/ls /var/log/gluster/ | wc -l); if [ ${logcnt} -gt 0 ]; then break; fi; sleep 5; done; tail -f /var/log/gluster/*.log"]
+          volumeMounts:
+            - name: varlog
+              mountPath: "/var/log/gluster"
+      volumes:
+        - name: plugin-dir
+          hostPath:
+            path: {{ kubelet_dir }}/plugins/kadalu
+            type: DirectoryOrCreate
+        - name: pods-mount-dir
+          hostPath:
+            path: {{ kubelet_dir }}/pods
+            type: Directory
+        - name: registration-dir
+          hostPath:
+            path: {{ kubelet_dir }}/plugins_registry/
+            type: Directory
+        - name: glusterfsd-volfilesdir
+          configMap:
+            name: "kadalu-info"
+        - name: gluster-dev
+          hostPath:
+            path: "/dev"
+        - name: varlog
+          emptyDir: {}
+        - name: csi-dir
+          hostPath:
+            path: {{ kubelet_dir }}/plugins/kubernetes.io/csi/
+            type: DirectoryOrCreate
+---
 ## Deploy CSI Provisioner
 ---
 kind: StatefulSet
